Changes
-------
2018-09-12

    * Barcode scanner

2018-08-28

    * Support Audio and Video file attributes

2018-07-27

    * Bug fixes

2018-07-23

    * Bug fixes (enumerated entities)

2018-07-20

    * Bug fixes

2018-07-04

    * Bug fixes

2018-06-24

    * Do not require coarse location access permission

2018-06-18

    * Fixed Russian translation

2018-06-10

    * Always check for permissions when required (Android 6+)

2018-06-07

    * Bug fixes in math functions

2018-05-29

    * Survey language selection
    * Support Collect 3.21.x new functions

2018-05-04

    * Bug fixes (crashes in Android 4)

2018-04-27

    * Bug fixes

2018-04-25

    * Bug fixes

2018-04-24

    * Bug fixes

2018-04-11

    * Change stored images file name format
    * Bug fixes

2018-04-03

    * Improve data export error feedback
    * Bug fixes

2018-03-19

    * Changed theme selector in settings

2018-03-09

    * Support configurable enumerated entities
    * Layout improvements
    * Bug fixes

2018-03-02

    * Bug fixes

2018-02-28

    * Bug fixes

2018-02-27

    * Bug fixes

2018-02-23

    * Bug fixes

2018-02-22

    * Hide not relevant attributes
    * New landing screen
    * Prevent automatically generated list of items from editing
    * Improved record list layout
    * Performance improvements
    * Bug fixes

2017-11-13

    * Submit data to remote Collect server (configurable in Settings)

2017-10-30

    * Fixed bug where images could disappear second time a record was loaded

2017-08-11

    * Added French translation
    * Fixed bug where surveys, with time attribute as key, crashed

2017-05-12

    * Added support for latest Collect Desktop version

2017-04-10

    * Fixed out-of-memory crashes with large records

2017-03-21

    * Added support for latest Collect Desktop version

2017-01-04

    * Fixed crash when some devices import survey from Google Drive

2016-12-07

    * Fixed crash when exceeding max entity count

2016-12-06
