@@ -21,7 +21,6 @@ import org.openforis.collect.android.gui.detail.CodeListDescriptionDialogFragmen
 import org.openforis.collect.android.viewmodel.UiAttribute;
 import org.openforis.collect.android.viewmodel.UiCode;
 import org.openforis.collect.android.viewmodel.UiCodeAttribute;
-import org.openforis.collect.android.viewmodel.UiCodeAttributeDefinition;
 import org.openforis.collect.android.viewmodel.UiCodeList;
 
 import static android.view.ViewGroup.LayoutParams.WRAP_CONTENT;
@@ -31,7 +30,7 @@ import static org.apache.commons.lang3.ObjectUtils.notEqual;
  * @author Daniel Wiell
  */
 public abstract class CodeAttributeComponent extends AttributeComponent<UiCodeAttribute> {
-    static final int RADIO_GROUP_MAX_SIZE = 20;
+    static final int RADIO_GROUP_MAX_SIZE = 100;
     static final String DESCRIPTION_BUTTON_TAG = "descriptionButton";
     private UiCode parentCode;
     final CodeListService codeListService;
@@ -48,7 +47,7 @@ public abstract class CodeAttributeComponent extends AttributeComponent<UiCodeAt
     public static CodeAttributeComponent create(UiCodeAttribute attribute, SurveyService surveyService, FragmentActivity context) {
         CodeListService codeListService = ServiceLocator.codeListService();
         int maxCodeListSize = codeListService.getMaxCodeListSize(attribute);
-        boolean enumerator = ((UiCodeAttributeDefinition) attribute.getDefinition()).isEnumerator();
+        boolean enumerator = attribute.getDefinition().isEnumerator();
         if (maxCodeListSize <= RADIO_GROUP_MAX_SIZE && ! enumerator)
             return new RadioCodeAttributeComponent(attribute, codeListService, surveyService, context);
         return new AutoCompleteCodeAttributeComponent(attribute, codeListService, surveyService, context);
